fix(Styling): Favourite toggle button z-index correction.

--- a/src/scss/components/_itunes-item.scss
+++ b/src/scss/components/_itunes-item.scss
@@ -12,6 +12,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 5;
 
   button {
     display: flex;
